sumo/tests/sumo/errors/network/junction/root__junction#type__empty1/errors.sumo
Error: An unknown or invalid junction type occured: '' on junction '1'.
 Can not build according junction.
Quitting (on error).
